syntax = "proto3";

package proto;

option go_package = "./";

message PrintRequest{}

message AddBlockRequest {
    string data = 1;
}

message PrintResponse {
    message Result {
        bytes prevHash = 1;
        string data = 2;
        bytes hash = 3;
        bool pow = 4;
    }
    repeated Result results = 1;
}

message AddBlockResponse {
    string data = 1;
}

service BlockChainService{
    rpc PrintBlocks(PrintRequest) returns (PrintResponse);
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse);
}